--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             </div>
             <div>
               <div class="small">Promo code (if any)</div>
-              <div class="value"><code id="promo">—</code></div>
+              <div class="value"><code id="promo">SSBU</code></div>
             </div>
           </div>
 
