--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
               <div class="value"><code id="depRange">3–20+ USD</code></div>
             </div>
             <div>
-              <div class="small">Promo code (if any)</div>
+              <div class="small">Promo code</div>
               <div class="value"><code id="promo">SSBU</code></div>
             </div>
           </div>
