--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     <div class="card">
       <div class="hero">
         <h1>Deposit required to activate access</h1>
-        <p>To activate access and start following the steps, a deposit is required. No promises or guarantees.</p>
+        <p>To activate access and start following the steps, a deposit is required.</p>
 
         <div class="box">
           <div class="row">
@@ -145,7 +145,7 @@
 
           <div class="rates" id="ratesList"></div>
 
-          <div class="note"><span class="warn">18+.</span> Playing can cause financial losses. No guarantees.</div>
+          <div class="note"><span class="warn">18+.</span> Playing can cause financial losses(0.35%).</div>
         </div>
       </div>
 
